testsuite/tests/indexed-types/should_fail/T16356_Fail2.stderr
T16356_Fail2.hs:8:3: error: [GHC-48178]
    • Illegal duplicate variable ‘k’ in:
        ‘type T @k @k a b = ...’
        The arguments to ‘T’ must all be distinct type variables.
    • In the default associated type family instance declaration for ‘T’
      In the class declaration for ‘C’

